// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer renders with default values 1`] = `
<DocumentFragment>
  <div
    class="css-sh1rxn"
  />
</DocumentFragment>
`;

exports[`Spacer renders with props 1`] = `
<DocumentFragment>
  <div
    class="css-av7sfo"
  />
</DocumentFragment>
`;
